syntax = "proto3";

package movie;

option java_package = "com.proto.movie";
option java_multiple_files = true;

message Movie {
    string id = 1;
    string title = 2;
    repeated MovieGenre genres = 3;
    repeated Person directors = 4;
    repeated Person writers = 5;
    repeated Person stars = 6;
    int32 year_of_production = 7;
    int32 duration_minutes = 8;
}

enum MovieGenre {
    ACTION = 0;
    COMEDY = 1;
    DRAMA = 2;
    HORROR = 3;
    SCI_FI = 4;
    THRILLER = 5;
    WAR = 6;
    WESTERN = 7;
}

message Person {
    string first_name = 1;
    string last_name = 2;
}

message AddMovieResponse {
    string movie_id = 1;
}

service MovieService {
    rpc AddMovie (Movie) returns (AddMovieResponse) {}
}
